Thu Oct  8 13:02:29 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * connectors/ami4ccm/docs/AMI4CCM-spec.odt:
          Described the use of IDL3+.

Thu Oct  8 12:32:38 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * connectors/ami4ccm/docs/AMI4CCM-spec.odt:
          Update example to meet the spec.

Thu Oct  8 11:06:29 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * connectors/ami4ccm/docs/AMI4CCM-spec.odt:
          Extended the component section.

Thu Oct  8 08:31:25 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * connectors/ami4ccm/docs/AMI4CCM-spec.odt:
          Some minor updates.

Wed Oct  7 15:15:20 UTC 2009  Jeff Parsons <j.parsons@vanderbilt.edu>

        * NEWS:

          Update.

Wed Oct  7 14:41:09 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/IDL_Test/Inherited_Component/IhC_Bar.idl
          Added missing include

Wed Oct  7 14:09:09 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * connectors/ami4ccm/examples/Hello/AMI/AMI_MyFoo_i.cpp:
        * connectors/ami4ccm/examples/Hello/AMI/AMI_exec.h:
        * connectors/ami4ccm/examples/Hello/AMI/AMI_exec.cpp:
          Got rid of ior file between CORBA server and client.

Wed Oct  7 13:33:44 UTC 2009  Johnny Willemsen <jwillemsen@remedy.nl>

        * connectors/dds4ccm/examples/Quoter/Connector/Quoter_Connector_exec.cpp
        * connectors/dds4ccm/examples/Quoter/Connector/Quoter_Connector_exec.h
          Refactored the connector into a template

Wed Oct  7 13:33:47 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * connectors/ami4ccm/examples/Hello/AMI/AMI.idl:
        * connectors/ami4ccm/examples/Hello/AMI/AMI_MyFoo_i.h:
        * connectors/ami4ccm/examples/Hello/AMI/AMI_MyFoo_i.cpp:
        * connectors/ami4ccm/examples/Hello/AMI/AMI_exec.h:
        * connectors/ami4ccm/examples/Hello/AMI/AMI_exec.cpp:
        * connectors/ami4ccm/examples/Hello/Hello_Base/Hello_Base.idl:
        * connectors/ami4ccm/examples/Hello/Sender/Hello_Sender.idl: