@@ -1,3 +1,8 @@
+Fri Oct  9 06:47:29 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * connectors/dds4ccm/examples/Quoter/descriptors/USER_QOS_PROFILES.xml:
+          QoS profile file for this example
+
 Thu Oct  8 13:02:29 UTC 2009  Marcel Smit  <msmit@remedy.nl>
 
         * connectors/ami4ccm/docs/AMI4CCM-spec.odt:
